--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 
   <link rel="stylesheet" href="./assets/app.css">
 
-  <script src="./assets/jquery.js"></script>
-  <link rel="stylesheet" href="./assets/bootstrap.min.css">
+  <!--<script src="./assets/jquery.js"></script>-->
+  <!--<link rel="stylesheet" href="./assets/bootstrap.min.css">-->
 </head>
 <body>
 <app-root>Loading...</app-root>
