--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,10 @@
 
   <link rel="stylesheet" href="./assets/sample.css">
   <link rel="stylesheet" href="./assets/app.css">
+  <link rel="stylesheet" href="./assets/forms.css">
 
-  <!--<script src="./assets/jquery.js"></script>-->
-  <!--<link rel="stylesheet" href="./assets/bootstrap.min.css">-->
+  <script src="./assets/jquery.js"></script>
+  <link rel="stylesheet" href="./assets/bootstrap.min.css">
 </head>
 <body>
 <app-root>Loading...</app-root>
